Update readme for new version of coffi